// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Completion contextSelfInClasses > contextSelfInClasses.ts at 4:40 1`] = `
[
  {
    "insertText": "Context.Tag("MyService")<MyService, \${0}>(){}",
    "isSnippet": true,
    "kind": "const",
    "name": "Tag("MyService")",
    "replacementSpan": {
      "length": 8,
      "start": 144,
    },
    "sortText": "11",
  },
]
`;

exports[`Completion effectDataClasses > effectDataClasses.ts at 4:35 1`] = `
[
  {
    "insertText": "Data.TaggedError("MyError")<{\${0}}>{}",
    "isSnippet": true,
    "kind": "const",
    "name": "TaggedError("MyError")",
    "replacementSpan": {
      "length": 5,
      "start": 133,
    },
    "sortText": "11",
  },
  {
    "insertText": "Data.TaggedClass("MyError")<{\${0}}>{}",
    "isSnippet": true,
    "kind": "const",
    "name": "TaggedClass("MyError")",
    "replacementSpan": {
      "length": 5,
      "start": 133,
    },
    "sortText": "11",
  },
]
`;

exports[`Completion effectSchemaSelfInClasses > effectSchemaSelfInClasses_dotToken.ts at 4:22 1`] = `
[
  {
    "insertText": "S.Class<Test>("Test")({\${0}}){}",
    "isSnippet": true,
    "kind": "const",
    "name": "Class<Test>",
    "replacementSpan": {
      "length": 2,
      "start": 130,
    },
    "sortText": "11",
  },
  {
    "insertText": "S.TaggedError<Test>("Test")("Test", {\${0}}){}",
    "isSnippet": true,
    "kind": "const",
    "name": "TaggedError<Test>",
    "replacementSpan": {
      "length": 2,
      "start": 130,
    },
    "sortText": "11",
  },
  {
    "insertText": "S.TaggedClass<Test>("Test")("Test", {\${0}}){}",
    "isSnippet": true,
    "kind": "const",
    "name": "TaggedClass<Test>",
    "replacementSpan": {
      "length": 2,
      "start": 130,
    },
    "sortText": "11",
  },
  {
    "insertText": "S.TaggedRequest<Test>("Test")("Test", {\${0}}){}",
    "isSnippet": true,
    "kind": "const",
    "name": "TaggedRequest<Test>",
    "replacementSpan": {
      "length": 2,
      "start": 130,
    },
    "sortText": "11",
  },
]
`;

exports[`Completion effectSchemaSelfInClasses > effectSchemaSelfInClasses_tagg.ts at 4:25 1`] = `
[
  {
    "insertText": "S.Class<Test>("Test")({\${0}}){}",
    "isSnippet": true,
    "kind": "const",
    "name": "Class<Test>",
    "replacementSpan": {
      "length": 5,
      "start": 130,
    },
    "sortText": "11",
  },
  {
    "insertText": "S.TaggedError<Test>("Test")("Test", {\${0}}){}",
    "isSnippet": true,
    "kind": "const",
    "name": "TaggedError<Test>",
    "replacementSpan": {
      "length": 5,
      "start": 130,
    },
    "sortText": "11",
  },
  {
    "insertText": "S.TaggedClass<Test>("Test")("Test", {\${0}}){}",
    "isSnippet": true,
    "kind": "const",
    "name": "TaggedClass<Test>",
    "replacementSpan": {
      "length": 5,
      "start": 130,
    },
    "sortText": "11",
  },
  {
    "insertText": "S.TaggedRequest<Test>("Test")("Test", {\${0}}){}",
    "isSnippet": true,
    "kind": "const",
    "name": "TaggedRequest<Test>",
    "replacementSpan": {
      "length": 5,
      "start": 130,
    },
    "sortText": "11",
  },
]
`;

exports[`Completion effectSelfInClasses > effectSelfInClasses.ts at 4:39 1`] = `
[
  {
    "insertText": "Effect.Service<MyService>()("MyService", {\${0}}){}",
    "isSnippet": true,
    "kind": "const",
    "name": "Service<MyService>",
    "replacementSpan": {
      "length": 7,
      "start": 141,
    },
    "sortText": "11",
  },
]
`;

exports[`Completion fnFunctionStar > fnFunctionStar.ts at 4:24 1`] = `
[
  {
    "insertText": "fn("program")(function*(\${1}){\${0}})",
    "isSnippet": true,
    "kind": "const",
    "name": "fn("program")",
    "replacementSpan": {
      "length": 0,
      "start": 128,
    },
    "sortText": "11",
  },
  {
    "insertText": "fn(function*(\${1}){\${0}})",
    "isSnippet": true,
    "kind": "const",
    "name": "fn(function*(){})",
    "replacementSpan": {
      "length": 0,
      "start": 128,
    },
    "sortText": "11",
  },
  {
    "insertText": "fnUntraced(function*(\${1}){\${0}})",
    "isSnippet": true,
    "kind": "const",
    "name": "fnUntraced(function*(){})",
    "replacementSpan": {
      "length": 0,
      "start": 128,
    },
    "sortText": "11",
  },
]
`;

exports[`Completion genFunctionStar > genFunctionStar.ts at 4:24 1`] = `
[
  {
    "insertText": "gen(function*(){\${0}})",
    "isSnippet": true,
    "kind": "const",
    "name": "gen(function*(){})",
    "replacementSpan": {
      "length": 0,
      "start": 129,
    },
    "sortText": "11",
  },
]
`;
